dnl Process this file with autoconf to produce a configure script.
AC_INIT(jpeginfo.c)
AC_CONFIG_HEADER(config.h)


dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_MAKE_SET


dnl Checks for libraries.
dnl Replace `main' with a function in -ljpeg:
AC_CHECK_LIB(jpeg, main)

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(unistd.h getopt.h)

dnl Checks for typedefs, structures, and compiler characteristics.

AC_CHECK_SIZEOF(long)
AC_CHECK_SIZEOF(int)



dnl Checks for library functions.
AC_CHECK_FUNCS(getopt_long)


AC_OUTPUT(Makefile)


